--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -178,7 +178,7 @@
     .li {
       &:first-child {
         background-color: $coulour-bacground-link-active;
-        border-radius: 10%;
+        border-radius: 1rem;
         transition: all 0.3s;
         position: relative;
         opacity: 0.7;
@@ -212,7 +212,7 @@
       &:nth-last-child(2) {
         border-bottom: 0;
         background-color: $coulour-lang;
-        border-radius: 10%;
+        border-radius: 1rem;
         transition: all 0.3s;
         position: relative;
         opacity: 0.8;
