--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -88,8 +88,8 @@
 
 @mixin navOpenClose {
   background-color: #fffaf1;
-  height: 100%;
-  position: fixed;
+  height: 143%;
+  position: absolute;
   width: 100%;
 }
 
@@ -104,9 +104,8 @@
   .nav {
     display: block;
     position: absolute;
-    top: 17%;
     @include media("tablet") {
-      top: 23%;
+      top: 18%;
     }
     ul {
       display: flex;
